// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-mixed-field Renders \`c-mixed-field\` with boolean type correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-input mixed-field__type-selector v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <label
            aria-hidden="true"
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Mixed field with boolean type
          </label>
          <div
            class="v-select__selections"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              toggle_on
            </i>
            <input
              aria-label="Mixed field with boolean type"
              aria-readonly="false"
              autocomplete="on"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
    </div>
  </div>
  <div
    class="v-input ml-2 v-input--selection-controls v-input--switch v-input--hide-details theme--light ma-0 mixed-field__switch"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-input--selection-controls__input"
        >
          <input
            aria-checked="false"
            aria-label="false"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="v-input--selection-controls__ripple"
          />
          <div
            class="v-input--switch__track theme--light"
          />
          <div
            class="v-input--switch__thumb theme--light"
          >
            <transition-stub
              mode="out-in"
              name="fab-transition"
            />
          </div>
        </div>
        <label
          aria-hidden="true"
          class="v-label theme--light"
          style="left: 0px; position: relative;"
        >
          false
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with boolean type correctly 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                title
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              String
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                exposure_plus_1
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Number
            </div>
          </div>
        </a>
      </div>
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                toggle_on
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Boolean
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                space_bar
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Null
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                view_array
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Array
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with custom props correctly 1`] = `
<div
  class="mixed-field mixed-field__solo-inverted"
>
  <div
    class="v-input mixed-field__type-selector v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-inverted v-text-field--solo-flat v-text-field--enclosed v-select v-input--has-state v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light error--text"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <div
            class="v-select__selections"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              title
            </i>
            <input
              aria-label="Mixed field label"
              aria-readonly="false"
              autocomplete="on"
              disabled="disabled"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon v-icon--disabled material-icons theme--light error--text"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
    </div>
  </div>
  <div
    class="v-input ml-2 v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-inverted v-text-field--solo-flat v-text-field--enclosed v-input--has-state v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light error--text mixed-field__text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            dense="true"
            disabled="disabled"
            name="mixedFieldName"
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with custom props correctly 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                title
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Custom string
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                exposure_plus_1
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Number
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                toggle_on
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Boolean
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with default props correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-input mixed-field__type-selector v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <div
            class="v-select__selections"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              title
            </i>
            <input
              aria-readonly="false"
              autocomplete="on"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
    </div>
  </div>
  <div
    class="v-input ml-2 v-text-field v-text-field--single-line theme--light mixed-field__text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            dense="true"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with default props correctly 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                title
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              String
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                exposure_plus_1
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Number
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                toggle_on
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Boolean
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                space_bar
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Null
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                view_array
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Array
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with errors correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-input mixed-field__type-selector v-text-field v-select v-input--has-state v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light error--text"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <div
            class="v-select__selections"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              title
            </i>
            <input
              aria-readonly="false"
              autocomplete="on"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light error--text"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
    </div>
  </div>
  <div
    class="v-input ml-2 v-text-field v-text-field--single-line v-input--has-state theme--light error--text mixed-field__text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            dense="true"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
        >
          <div
            class="v-messages__wrapper"
          >
            <div
              class="v-messages__message"
            >
              First error message
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with errors correctly 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                title
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              String
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                exposure_plus_1
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Number
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                toggle_on
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Boolean
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                space_bar
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Null
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                view_array
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Array
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with null type correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-input mixed-field__type-selector v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <label
            aria-hidden="true"
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Mixed field with null type
          </label>
          <div
            class="v-select__selections"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              space_bar
            </i>
            <input
              aria-label="Mixed field with null type"
              aria-readonly="false"
              autocomplete="on"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
    </div>
  </div>
  <div
    class="v-input ml-2 v-text-field v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light mixed-field__text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            disabled="disabled"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with null type correctly 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                title
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              String
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                exposure_plus_1
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Number
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                toggle_on
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Boolean
            </div>
          </div>
        </a>
      </div>
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                space_bar
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Null
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                view_array
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Array
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with null type correctly 3`] = `
<div
  class="mixed-field"
>
  <div
    class="v-input mixed-field__type-selector v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <label
            aria-hidden="true"
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Mixed field with null type
          </label>
          <div
            class="v-select__selections"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              view_array
            </i>
            <input
              aria-label="Mixed field with null type"
              aria-readonly="false"
              autocomplete="on"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
    </div>
  </div>
  <c-array-mixed-field-stub
    class="ml-2"
    types="[object Object],[object Object],[object Object],[object Object]"
    values="0,1,,false,"
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with null type correctly 4`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                title
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              String
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                exposure_plus_1
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Number
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                toggle_on
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Boolean
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                space_bar
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Null
            </div>
          </div>
        </a>
      </div>
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                view_array
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Array
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with number type correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-input mixed-field__type-selector v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <label
            aria-hidden="true"
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Mixed field with number type
          </label>
          <div
            class="v-select__selections"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              exposure_plus_1
            </i>
            <input
              aria-label="Mixed field with number type"
              aria-readonly="false"
              autocomplete="on"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
    </div>
  </div>
  <div
    class="v-input ml-2 v-text-field v-text-field--single-line v-input--is-label-active v-input--is-dirty theme--light mixed-field__text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            dense="true"
            name="mixedFieldName"
            type="number"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with number type correctly 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                title
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              String
            </div>
          </div>
        </a>
      </div>
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                exposure_plus_1
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Number
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                toggle_on
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Boolean
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                space_bar
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Null
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                view_array
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Array
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with string type and items correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-input mixed-field__type-selector v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <label
            aria-hidden="true"
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Mixed field with boolean type
          </label>
          <div
            class="v-select__selections"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              toggle_on
            </i>
            <input
              aria-label="Mixed field with boolean type"
              aria-readonly="false"
              autocomplete="on"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
    </div>
  </div>
  <div
    class="v-input ml-2 v-input--selection-controls v-input--switch v-input--hide-details theme--light ma-0 mixed-field__switch"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-input--selection-controls__input"
        >
          <input
            aria-checked="false"
            aria-label="false"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="v-input--selection-controls__ripple"
          />
          <div
            class="v-input--switch__track theme--light"
          />
          <div
            class="v-input--switch__thumb theme--light"
          >
            <transition-stub
              mode="out-in"
              name="fab-transition"
            />
          </div>
        </div>
        <label
          aria-hidden="true"
          class="v-label theme--light"
          style="left: 0px; position: relative;"
        >
          false
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with string type and items correctly 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                title
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              String
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                exposure_plus_1
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Number
            </div>
          </div>
        </a>
      </div>
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                toggle_on
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Boolean
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                space_bar
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Null
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar mixed-field__type-selector-avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon mixed-field__type-selector-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                view_array
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Array
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
